--- a/_sass/components/_cover.scss
+++ b/_sass/components/_cover.scss
@@ -13,7 +13,7 @@
 }
 .has--cover {
   background-position: 50% 50%;
-  background-size: contain;
+  background-size: cover;
   .title {
         font-size: modular-scale(4);
     }
