--- a/_sass/components/_list.scss
+++ b/_sass/components/_list.scss
@@ -2,16 +2,16 @@
 // This file contains styles for lists - over and above Bitters
 // -----------------------------------------------------------------------------
 
-ol.default {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
+ul,
+ol {
 
-ul.default {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+  &%default-ul,
+  &%default-ol {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+
 }
 ul {
   list-style-type: disc;
