--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,9 +4,11 @@ layout: default
 ---
 <div class="page">
 
+  {% if page.display_page_title %}
   <header class="page--header">
     <h1 class="page--title">{{ page.title }}</h1>
   </header>
+  {% endif %}
 
   {% if page.main_image_path and page.display_image %}
     <figure>
