--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -4,9 +4,11 @@ layout: default
 
 <div class="page">
 
+  {% if page.display_title %}
   <header class="page--header">
     <h1 class="page--title">{{ page.title }}</h1>
   </header>
+  {% endif %}
 
   <article>
 
@@ -59,7 +61,7 @@ layout: default
                  <!-- end format images -->
                {% endif %}
 
-               {% if page.display_title %}
+               {% if page.display_thumb_title %}
                   <figcaption class="gallery--caption">{{ thisimage.image_title }}</figcaption>
               {% endif %}
 
